--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,7 @@
 @import 'dropzone/dist/dropzone.css';
 @import 'select2';
 @import '~@fortawesome/fontawesome-free/css/all.css';
+@import 'jquery-datetimepicker/build/jquery.datetimepicker.min.css';
 
 body {
   background: gray;
